# nexus

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.py  pyproject.toml  requirements.txt  run.py  seed.py  seed_orders.py
app/: __init__.py  extensions.py  models.py  utils.py
app/routes/: admin.py  cart.py  store.py
app/services/: order_service.py  product_service.py
app/static/css/: style.css
app/templates/: base.html  checkout.html  index.html  product_detail.html  success.html
app/templates/admin/: base.html  dashboard.html  login.html  orders.html  products.html
app/templates/admin/partials/: product_row.html  products_list.html
app/templates/partials/: cart_drawer.html  filters.html  main_layout.html  product_list.html
